plotting input  data

--- a/assignment02.ipynb
+++ b/assignment02.ipynb
@@ -56,11 +56,7 @@
       "metadata": {
         "id": "v-pxZna-0loy",
         "colab_type": "code",
-        "outputId": "cf6914a8-c664-4184-b797-f12128297b7c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 326
-        }
+        "colab": {}
       },
       "source": [
         "!pip install tensorflow==1.12.0\n",
@@ -68,32 +64,8 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: tensorflow==1.12.0 in /usr/local/lib/python3.6/dist-packages (1.12.0)\n",
-            "Requirement already satisfied: tensorboard<1.13.0,>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.12.2)\n",
-            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.1.0)\n",
-            "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (3.10.0)\n",
-            "Requirement already satisfied: gast>=0.2.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (0.3.3)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.12.0)\n",
-            "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (0.8.1)\n",
-            "Requirement already satisfied: keras-applications>=1.0.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.0.8)\n",
-            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (0.34.2)\n",
-            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.1.0)\n",
-            "Requirement already satisfied: absl-py>=0.1.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (0.9.0)\n",
-            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.27.2)\n",
-            "Requirement already satisfied: numpy>=1.13.3 in /usr/local/lib/python3.6/dist-packages (from tensorflow==1.12.0) (1.18.2)\n",
-            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.13.0,>=1.12.0->tensorflow==1.12.0) (3.2.1)\n",
-            "Requirement already satisfied: werkzeug>=0.11.10 in /usr/local/lib/python3.6/dist-packages (from tensorboard<1.13.0,>=1.12.0->tensorflow==1.12.0) (1.0.0)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.6.1->tensorflow==1.12.0) (46.0.0)\n",
-            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-applications>=1.0.6->tensorflow==1.12.0) (2.10.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -192,6 +164,82 @@
         "#fit the line with new trainig data\n",
         "for step in range(3001):\n",
         "    sess.run(train,feed_dict={X:xData, Y:yData})"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xBCMVOd49J-9",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **4. Plotting the results**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t9eKLQ5P9UqL",
+        "colab_type": "text"
+      },
+      "source": [
+        "4.1. input data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ug4r4wwN9RMr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        },
+        "outputId": "9167de85-6c20-48ae-a712-64a351fe2c2c"
+      },
+      "source": [
+        "plt.plot(xData,yData,'k.',xData,Y_func,'b.')"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<matplotlib.lines.Line2D at 0x7f99b0228160>,\n",
+              " <matplotlib.lines.Line2D at 0x7f99b0228240>]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAD4CAYAAAAJmJb0AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4yLjEsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+j8jraAAAgAElEQVR4nO3df3Akd3nn8fczLY2JIRXDmMMLWDY4\nDuaHEuRTLQwsyZAlDjhe28kmlIHLglmQczk7qO6uNmxcIVRc1MBRxylHcoAcY3av7Bgum+AfLMG2\nwiRrl2yytjcIAj7bxF7s82IyiclRvtJopp/7o3u0rdHMaLTze/R5ValW6u6Z/mo0++irp59+vubu\niIjIaEr1ewAiItI9CvIiIiNMQV5EZIQpyIuIjDAFeRGRETbW7wEknXnmmX7uuef2exgiIkPlgQce\n+Cd3f3G9fQMV5M8991yOHj3a72GIiAwVM3ui0T6la0RERpiCvIjICFOQFxEZYQryIiIjTEFeRGSE\nKciLiIwwBXkRkT5bXIR8Pvq30waqTl5EZKtYXFykUCiQyVzC7OwkpRKk07CwANls586jIC8i0mOL\ni4vkcvtZWXkzqdQi7q8jDI1SCQoFBXkRkaF28OAjlEqHgTSVSpkgqBAEY6TTkMt19lwK8iIiPbK4\nGM3UT5y4CEgThWBn164fsn37NnK5zs7iQUFeRKQnFhdh504olSAIzmJ8PKRcrpBOp9i3b1vHg3tV\n20HezJ4H/C1wWvx8f+7uf2BmrwBuATLAA8Bvunup3fOJiAyT6uz9+HFYXnbC0HB3ZmZSTEzQldl7\nUidm8svAL7r7j81sHLjHzL4K/Efgv7n7LWb2WWAv8JkOnE9EZCgkZ++pVIUwXAECwnCFqanHmJmZ\n7PoY2g7y7u7Aj+Mvx+MPB34ReHe8/QDwURTkRWTEzc8vcehQkd27MxSLUWlkpQJhCPAF4AlSqSMU\ni78CREG+Wk6Zy+XIdnha35GcvJkFRCmZnwb+BHgMeNbdy/EhTwIva/DYGWAGYGJiohPDERHpi/n5\nJa666jzg1dx5Z4l9+x4jnT6PUgnGxsD9FiqVe0in0+RynwSiAL9z505KpRLpdJqFhYWOBvqOBHl3\nrwCvN7MzgL8ELtjEY+eBeYDp6WnvxHhERHqpmnf/8pdXSFbNHDv2fRYWzqNQgFwuAPLrZuyFQoFS\nqUSlUqFUKlEoFAYvyFe5+7Nm9nUgC5xhZmPxbP7lwFOdPJeIyCBYm3f/OWCFKGO9wu7dGbLZ5IXV\n7LoAnsvlSKfTqzP5XIcL5TtRXfNiYCUO8D8B/BLwCeDrwK8TVdi8F7i13XOJiAyKZNVMNe8OAZdf\n/gzPPfcwu3dnWrqwms1mWVhY6FpO3qLrpm08gdnPEl1YDYgann3J3f/QzF5JFOBfBDwE/Dt3X272\nXNPT0641XkVkUNXrNxMEYAblcv3eM928qFplZg+4+3S9fZ2orvkmMFVn+/eA7e0+v4hIP50M7Bmu\nuebm1X4zYfha3FO4O5deemJ19p7NTq55bDcvqrZCd7yKiDSQDNKQpVL5GtV+M1CiWvP+la9cQRje\ny5EjaSYnF3p2UbUVCvIismU1SqVUtx8/fpzl5QsJw7cA55CsnIE/BY4Df0O5fB/uvi6Qd/uiaisU\n5EVkS2qUSkluN3sTYXgnUXAvMzYGlUqFsTHD7ItUKvcQBAFmacrl8rpA3u2Lqq1QkBeRkVdvxt4o\nlVIoFFZn72bnYHYa7gGpVMAHPmCr/WaSNe/V56sXyLPZ9WWTvaQgLyIjrdGMvVEqJZO5hDD8EJDG\nvcz4uBGGkE4be/Y0rnnvZyBvRkFeREZaoxl7bSoFsuTzcPz4JKlU1C0ylQrYu9d60i2yWxTkRWSk\nNbv4WQ32a3u9w/i4xXXvtbP34aMgLyIjrdnFz/p3rcIHP8hQz96TFORFZOQlL342ums1lQoJQ2ds\nDPbsCYY+uFcpyIvIlrG4uEgut3/1rlX3162u1GR2A/A47vcCeaI+i8NPQV5EtoyDBx+hVDpM9a7V\nIKgQBGOkUmUqlQO430ulEvTlztRuUZAXkZFXzb2fOHERybtWd+36Idu3byOT+S6zsw9SKgV9uzO1\nWxTkRWSkra2cOYvx8ZByuUI6nWLfvm1x7n2Sycn+3pnaLQryIjLUGvefaVQ5k6pbOdPvO1O7RUFe\nRIZW4/4za+vex+JIl04z9HXvm6UgLyJDq/Zu1oMHH6FQyI503ftmKciLyNBK3s0aBDu48cb3UC5r\n9p6kIC8iQyeZh5+bu59Dh4qcfvoF3H57oNl7DQV5ERkYrayHmszDB8EOzBYol4N1s/epqSWKxTuA\nHKNyY9OpUJAXkYHQ6nqoyX7vYXgOYLhH+3bteprnnnuY17/+WWZn393XtVUHhYK8iAyEVtdDXd/v\nHcIQxsYqHD78LiqVe/jrvzbCMCQMw76trTooFORFpOfqpWVqWwJnMhny+Ty5XI6lpRdw6FCR3bsz\nFIv1+70fP34T119/D5VKhVQqFS/LZyN3B+tmKciLSE81SsskWwJnMhlmZ2dX11ktl/8KeDV33lli\n377HOO208yiV1vZ7X1w8nwMHTv6SmJubo1gsjtwdrJulIC8iPdUsLVMN9vl8fjXvDhMk+80cO/Z9\nFhbOo1BYWzkzCItmD6K2g7yZnQ0cBF4CODDv7n9kZi8CvgicCzwOvNPd/6Xd84nIcGu2UlNVMu8O\n5fjDgRV2786QzdYvixzV1gTt6MRMvgz8J3d/0Mx+EnjAzO4C3gcsuPvHzezDwIeB3+3A+URkiLW2\nUtPavPull57gueceZvfuDDMzk/0b/BAyr9YedeoJzW4F/jj+yLn702a2DSi4+6uaPXZ6etqPHj3a\n0fGIyHCo7TdjRrzOKiwsbO0bmjZiZg+4+3S9fR3NyZvZucAUcD/wEnd/Ot51giidU+8xM8AMwMTE\nRCeHIyJDYCuss9pPHQvyZvYC4BAw6+7/amar+9zdzazunwzuPg/MQzST79R4RGTwqVtk93UkyJvZ\nOFGAv8nd/yLe/AMz25ZI1zzTiXOJyPDT7L13OlFdY8ANwHfc/VOJXbcB7wU+Hv97a7vnEpHhVzt7\nT6VCwtAZG4M9ewIF9w7rxEz+zcBvAktmdize9ntEwf1LZrYXeAJ4ZwfOJSJDqt7s3d0xuwF4HPd7\ngTxbuZlYN7Qd5N39HsAa7N7Z7vOLyPCqti/IZC5hdnZyXe49lSpTqRzA/V4qlWBL95jpFt3xKiJd\nsbi4SC63n5WVN5NKLeL+OsIwmg9Wc++ZzHeZnX2QUinY8j1mukVBXkS64uDBRyiVDgNpKpUyQVAh\nCMZqKmcmmZxUK4JuUpAXkY6q5t5PnLiIZM+ZXbt+yPbt29ZVzqgVQXcpyItIx6ytnDmL8fGQcrlC\nOp1i375tqpzpAwV5EWlZo+X5Gte9p1br3mGRfF5pmV5TkBeRpk5WyJzs8Z7sA9/KXautLu0nnacg\nLyINJYOz2dol9Q4efIRCIdvSXautLu0nnacgLyINJYNzckm9INjBjTe+h3K5tZ4zrfSQl+5QkBeR\nhrn22uB8zTU3c+zYGZx++gXcfnvQcs8ZrdrUPwryIltcs3z52nVX69+1mk7D1NQSxeIdQI5GbQlU\nKtkfCvIiW0i9GfvG+fIskOWhh+rn3jOZJWZn36AFtAeUgrzIFtFoxt4sX95K5Uw+f8fqL4nl5WWu\nvvpqwjBUFc2AUJAX2SIazdjr5cs30+89+UvCzKhUKqsVOKqi6T8FeZEtotmMPZkv3+xqTWvz9mtr\n6VVF038K8iJbRLMKl+rMPZeL/m1ltaba/H71+SYnJ1VFM0DMfXCWVZ2envajR4/2exgiW0py5p5O\nw9wczM6e/HphYf3sXXewDhYze8Ddp+vt00xeZAQ1qntfe8z6vHupBMViFNirM/t6D9cdrMNDQV5k\nxLQyy26Wd682E4MCjeredQfr8FCQFxkxzWbZrVTNwMa/JHQH6/BQkBcZMY1m2a1WzeTzraVidAfr\ncFCQFxkRyTx8cpYNWfL51mreQamYUaMgLzIC6uXh9+/f33T23qjfjFIxo0VBXmQE1Obhk73el5ed\nMDTcnZkZq9tvpjbvrlTM6Eh14knM7PNm9oyZfSux7UVmdpeZPRL/+8JOnEtE1qumWIIgWO31/vu/\nDzfcUCEMl4EVwvD/MTW1xP79UCzesS7vLqOpI0Ee+ALw9pptHwYW3P18YCH+WkS6IJvNMjd3Pzt3\n3s3FF99CuRz1ei+XIfrv+RFSqYvi9MzaXwrKu4+2jqRr3P1vzezcms2XESX7AA4QFd3+bifOJyJr\nLS5St9f72Bi430Klck8czD8JKO++lXQzJ/8Sd386/vwE8JIunktkS9q47j0A8nWDufLuW0NPLry6\nu5tZ3SY5ZjYDzABMTEz0YjgiI6H1bpEK5ltZN4P8D8xsm7s/bWbbgGfqHeTu88A8RA3KujgekZGw\nmV7vIt0M8rcB7wU+Hv97axfPJbIlbLbXu0hHgryZ/RnRRdYzzexJ4A+IgvuXzGwv8ATwzk6cS2Sr\nSN7BClnN3uWUdKq65l0Ndu3sxPOLbDXJO1iDYAdmC5TLgWbvsmm641VkABUKBZaXLyQM30IYngOA\nO2vuWtXsXVqhIC8ygDKZSwjDDwFp3MvAChAShitMTT3GzMwk0NriILK1KciLDJCTlTOTpFJRzxkz\nw/164AlSqSMUi78CTGoJPmmJgrzIgKitnBkfN8rl9XetZjJ7yOfzHD9+XEvwyYYU5EX6IJlmWVp6\nAYcOFTn99Asolc5qetdqJpNhdnY2viAbMBZfhVX/GWlEQV6kx5JpFrM3US7/FfBqoMz4eAikGt61\nms/nV2fvAB/84AeZmJhQTl4aUpAX6bFk5QxMAGmi/4rO1NQxLr/8woaVM7WrNu3Zs0fBXZpSkBfp\nsWTlDJTjDwdW2Lt3nJmZxo9V90jZLAV5kR6Zn19azb2nUj9BGBqpVMCll57gueceZvfuzGppZDPq\nHimboSAv0gPz80tcddV5nMy9O2ZGOm3s27eNbHZbv4coI0pBXqRNa3vMsK7fTC4Hhw4ViQJ889y7\nbm6STlOQF2nD2h4zAWZGuVxe028mnYZrrjmbO+8s0Sz3rpubpBsU5EXaUCgUVksawzDE/Y3AL8T9\nZgz36OamM844j899LsrJN8q9J59LNzdJpyjIi7QhWdJ4suY96jczPg5hGHWLjNIyk00rZ2rLI3Vz\nk3SCgrxIG7LZLHNz969Wzdx228mqmb17N9ctUuWR0g3mPjgr7k1PT/vRo0f7PQyRltX2mzGDcjma\nvS8sqBWw9IaZPeDu0/X2aSYvcgq0zqoMCwV5kU3SOqsyTBTkRVq02dm7at5lECjIi7Rgs7N31bzL\noFCQF2niVHPvqnmXQaEgL9JAs9n71NQSxeIdQA5YH7xV8y6DQkFepMZGs/dMZonZ2Tc0TcWo5l0G\nhYK8SEIrs/eHHmptbVW1BJZB0PUgb2ZvB/4ICIA/dfePd/ucIpu1mdm71laVYdLVIG9mAfAnwC8B\nTwJ/Z2a3ufs/dPO8Io3UK2tspXImn79Da6vKUOr2TH478Ki7fw/AzG4BLgMU5KXjGvV1PxnM15Y1\nzs3dT7E4yfHjsLzshKHh7mtWaoIfk88XyGQyWltVhlK3g/zLgO8nvn4SeEPyADObAWYAJiYmujwc\nGVWN+ronL4wmyxqXly/kt3/7VYRhSCoVEoZlICAMV/jKV64gDO+lUFj7PHNzcxSLRc3eZaj0/cKr\nu88D8xA1KOvzcGRI1fZ1B3D3NRdGc7kcQbCDMHwzMEGlkgJScQrmRuA48DeUy/fh7uuep1gssn//\n/j59hyKnpttB/ing7MTXL4+3iXRUsi69diZ/8sJoFrMFwIAKUKa6UlMQ3Awsxo9Nx6s7NXoekeHR\n7SD/d8D5ZvYKouB+BfDuLp9TtqDaunRYu9ZqPh9VzpTLAe5gZgTBFwjDxxkfv5dPf/o3KRYvrvPY\n9bl9kWHS9X7yZnYxMEdUQvl5d/9Yo2PVT146rVm/97m5qO5dAVyGXV/7ybv7YeBwt88jktRaz5lJ\nYP1aqyKjpO8XXkVOVaNWvur3LnKSgrwMpMYBPNqeyWSYnZ1d0z8GsnVn77t2Pb1a9x7N3kW2DgV5\nGTiNerEnt5sZYRgShiGlUomDBx/hwIHsutn72FiFw4ffRaVyD0eOpJmcVF932VpS/R6ASK16vdhr\nt4dhiNmbMPs9gmAH8Aurs/dKBa68Eq67Dq688iYqlXvWPZfIVqGZvAycRr3Y19bC78D9bsIwhZkz\nNRWQTkdpmmTufXHxfA4cUF932boU5GXgNOrFns1mmZu7n0OHipx++gXcfvsY7lFJZLEICwtRRU1y\ntSb1dZetrut18puhOnlpplnN+8KCqmZk6+prnbxIq5qVRJ7KOqsioiAvfdasJDKqqFHNu0g7FOSl\nbzYqiSwUspq9i7RJQV76JlkSmUqlVrs+BsEObrzxPZTLmr2LtEtBXvqmtlTymmtu5tixM+LKmUCz\nd5EOUJCXvkmWN2YylzA7O6ncu0iHKchLn2WBLA891Dj3Dovk86pzFzkVCvLSE/XKI1upnGnUx0ZE\nWqMgL11XG6jn5u6nWJxsqXKmXh8bBXmR1inIS9clA/Xy8oVcffUFhGFrufdGfWxEpDUK8tJ1uVyO\nINhBGL4Zs3OoVMYIw2jfRpUz6j0j0h4Feemak3ezXoLZAmCkUk4qZas9Z1qpnMlmswruIqdIQV46\nKtmm4JprbmZl5c2kUou4vw53Iwxh717VvYv0ioK8dEzyAitkqVS+BqSpVMoEQYUgGCOdhqmpJYrF\nO4AcUQmliHSLgrx0TKFQYHn5QsLwLcA5QJroLebs2vVDtm/fRiazxOzsG1QSKdIjWv5POiaTuYQw\nvBO4DngfY2NgVuG001Ls27eN/fuhWLyj7tJ+ItIdmslL2+bnl1ZXa0qlfoIwNFKpgA98wNbl3lUS\nKdJbbQV5M/sN4KPAq4Ht7n40sW8/sBeoAL/j7l9r51zSG7V3pjZayKNqfn6Jq646j+gtUGZ83DEz\n0mmrWzmjkkiR3mp3Jv8t4NeAzyU3mtlrgCuA1wIvBe42s59x90qb55MuWn9n6lzdhTyiY6PVmr78\n5RWSufepqWNcfvmFTStnVBIp0jttBXl3/w6AmdXuugy4xd2XgX80s0eB7cBiO+eT7qptIXDo0KG6\nLQUWF+Gtb61QKhmp1M8CZcCBFfbuHWdmps/fiIis6lZO/mXAfYmvn4y3rWNmM8AMwMTERJeGI62o\nzZfv3r2bI0eOrH6dyVxCPg/f+MYJlpfPBAIqlQo///Pf43nPe4bduzPMzEz2+9sQkYQNg7yZ3Q2c\nVWfXte5+a7sDcPd5YB5genra230+aU29XHu9fPnk5OS6fu9wJsnZ+2tec5TPfGZP/74ZEWlowyDv\n7m87hed9Cjg78fXL420yAJq1712fL1/f7z2VCgiCGwnDxxkfv5c9e/J9+T5EZGPdStfcBtxsZp8i\nuvB6PvCNLp1LNqnV9r2N+70bc3NvpFj8J3K5vC6iigywdksofxX4NPBi4Ctmdszdf9ndv21mXwL+\ngejv+v+gyprB0axWvVo1k8tF/yb7ve/a9TTPPfdwIveu/LvIoDP3wUmDT09P+9GjRzc+UNq20UpN\n6TTMzcHsbPT12FgF951UKveoHYHIgDGzB9x9ut4+3fG6RSVz79XZe3KlplIJikVYWKjuu4nrr79H\nKzSJDBkF+RG30R2rzdZZrd7QFK21ej4HDqgdgciwUZAfYc2qaOrN3qHxSk1qRyAynBTkR1ijKppm\ns/dmKzWpHYHI8FGQH2G1VTTVO1ZrZ+/JqplsVhUzIqNE1TVDbKN8e/KY5B2rQQBmUC6rakZkFKi6\nZgQ1y7evtf6OVTiZe1fVjMhoU5AfUq3ctdpK7l1VMyKjTUF+SLVy12orlTOqmhEZbcrJD7FGd61W\ne72PjTmpVEC5HM3eFxYaV86IyPBSTn5E1btrNdnrfWVlhcsvf4bt27cRTfQXyec1YxfZShTkR0By\n9m6WIdnr/ayz7mL//j2buFArIqNEQX6I1Zu9u1dIpQ7i/sSaXu+tthcWkdGiID+kkpUztSs1XXrp\ns2zf/oI1vd6bXagVkdGlID9AWru5aX3lTO1KTfv2rV/IQ1U0IluTgvyAaCVn3u5KTeo9I7L1KMgP\niGY589bq3rVSk4ispyA/IBrlzE+1Y6SICCjID4zanPnS0gv46EcLnH76BZRKZ6ljpIicEt3xOoDm\n55e46qrzgDRQZnw8TRim1DFSROpqdsdrqteD2YoWFxfJ5/MsLi5ucBzk83DDDStEAX4MCJiaOsZ1\n18GVV95EpbK2Y6SISDNK13RZq3eaJnPvqdTPAStU69737h1nZkYdI0Vk8xTku2yjO03rV84EXH75\nM6u598nJH5PP58nlcqp1F5FNUZDvso1aAjeqnNm3bxvZ7La6fwns37+/P9+MiAydtoK8mX0S2AWU\ngMeAK9392XjffmAvUAF+x92/1uZYh1Jt1Qxkyeej2vZCYeN+7+o5IyLtaHcmfxew393LZvYJYD/w\nu2b2GuAK4LXAS4G7zexn3L3S5vmGUvVO0+TMPZ2Gubno3+rX9ere1XNGRNrRVpB39zsTX94H/Hr8\n+WXALe6+DPyjmT0KbAeal5cMoc32m1ledsLQWF52ikVjbm6JQ4eKDeve1XNGRNrRyZz8+4Evxp+/\njCjoVz0Zb1vHzGaAGYCJiYkODqf7NttvJpWqEIYrQEAYrvDss3dy3XXvplQqceRImsnJ+pU36jkj\nIqdqwyBvZncDZ9XZda273xofcy1Rr9ubNjsAd58H5iG6GWqzj++nzfabCUOALwBPkEod4dix5yvf\nLiJdtWGQd/e3NdtvZu8DLgF2+snbZ58Czk4c9vJ420jZbL+ZsTFwv2X1jtXdu+c4cuSI8u0i0jXt\nVte8HdgH/IK7P5fYdRtws5l9iujC6/nAN9o51yBJ5uHrVc407hYZAPk1+fXJyUnl20Wka9rqXRNf\nUD0NKMab7nP334r3XUuUpy8Ds+7+1Y2eb5B711QDeyaTYXZ2dl0evnb27h5SLjvpNHz964G6RYpI\n1zTrXdNudc1PN9n3MeBj7Tz/oEheYDUzwjAkDENKpRIHDz5CoZBdM3t3d8xuAB7H/V4gDyjKi0jv\n6Y7XFiQvsKZSKYIgwMwIgh3ceON7KJfX5t5TqTKVygHc76VSCXRBVUT6RkGejWvday+wXnPNzRw7\ndgann34Bt98erOv1/vrXP8unP/0gpVKgC6oi0ldbvp98610iqzn5S5idnVzNvZtBucy6Xu9zc3MU\ni0VdUBWRrutaTn4UtN4bJgtkeeih+pUzx4/fxPXXn+z1XiwW1UhMRPpuywf5VnrDtLLOqnq9i8gg\n2vJBvllvmPq93ut3i1SPGREZRFsqJ99KM7GTx66dvVdz7+k0LCys7xYpItIvysmzuWX4Wp29i4gM\nui0T5Fu5wNpK7l1EZJhsmSC/0TJ8mr2LyCga+SDfqJlYsiWwZu8iMqpGOsg3WwS7ldk7LJLPq1pG\nRIbXSAf5Rnn41ureW7tQKyIyyEY6yNfm4TOZSzbo9w7V2fvx48e1apOIDL2RDvLJG5Rqe85sNHsP\ngoCx+CDdwSoiw2qkg3ykec+ZZOVMMr0THfNBJiYmlJMXkaE10kG+We59amqJYvEOIEd1QY/a9M6e\nPXsU3EVkqI1EkE+WSUKWQiGaoRcK9WfvmcwSs7NvWHdRVf1nRGTUDH2QX5tH34HZAuVyQDoNc3PR\nrL1UWpt7z+fvaHhRtRrsRURGwdAH+UKhwPLyhYThWwjDcwBwh+Vlp1g0FhZYndlXY3cr7YVFREbB\n0Af5TOYSwvBDQBr3MrAChIThCpnMY2Szk+vuWlVaRkS2iqEP8sXiJKmUE4aGmeF+PfAEqdQRisVf\nASbrPk5pGRHZCoY+yOdycNppRqkUVc+437K6zmou98l+D09EpK+GPshnsyTy7gGQVxpGRCTW1spQ\nZnYdcBkQAs8A73P3/2NmBvwRcDHwXLz9wY2er9srQ4mIjKJmK0Ol2nzuT7r7z7r764E7gI/E298B\nnB9/zACfafM8IiJyCtoK8u7+r4kvnw9U/yy4DDjokfuAM8xsWzvnEhGRzWs7J29mHwP2AD8C3hpv\nfhnw/cRhT8bbnq7z+Bmi2T4TExPtDkdERBI2nMmb2d1m9q06H5cBuPu17n42cBNw9WYH4O7z7j7t\n7tMvfvGLN/8diIhIQxvO5N39bS0+103AYeAPgKeAsxP7Xh5vExGRHmorJ29m5ye+vAz4bvz5bcAe\ni7wR+JG7r0vViIhId7VbQnkIeBVRCeUTwG+5+1NxCeUfA28nKqG80t03rI00sx/Gz3MqzgT+6RQf\n202DOi4Y3LFpXJujcW3OKI7rHHevm+9uK8gPEjM72qhOtJ8GdVwwuGPTuDZH49qcrTauduvkRURk\ngCnIi4iMsFEK8vP9HkADgzouGNyxaVybo3FtzpYa18jk5EVEZL1RmsmLiEgNBXkRkRE2VEHezH7D\nzL5tZqGZTdfs229mj5rZw2b2yw0e/wozuz8+7otmlu7CGL9oZsfij8fN7FiD4x43s6X4uK73Vzaz\nj5rZU4mxXdzguLfHr+GjZvbhHozrk2b2XTP7ppn9pZmd0eC4nrxeG33/ZnZa/DN+NH4vndutsSTO\nebaZfd3M/iF+/3+ozjE5M/tR4uf7kXrP1aXxNf3ZxDdF/vf4NfummV3YgzG9KvFaHDOzfzWz2Zpj\nevKamdnnzewZM/tWYtuLzOwuM3sk/veFDR773viYR8zsvac0AHcfmg/g1UQ3XxWA6cT21wB/D5wG\nvAJ4DAjqPP5LwBXx558F/n2Xx/tfgY802Pc4cGYPX7uPAv95g2OC+LV7JZCOX9PXdHlcFwFj8eef\nAD7Rr9erle8f+G3gs/HnVwBf7MHPbhtwYfz5TwL/u864csAdvXo/beZnQ7SuxFcBA94I3N/j8QXA\nCaIbhnr+mgE/D1wIfCux7b8AH44//3C99z3wIuB78b8vjD9/4WbPP1QzeXf/jrs/XGfXZcAt7r7s\n7v8IPApsTx4Q34X7i8Cfx02mlScAAAPJSURBVJsOAJd3a6zx+d4J/Fm3ztEF24FH3f177l4CbiF6\nbbvG3e/0aAV2gPuI+hz1Syvf/2VE7x2I3ks7459117j70x4vuuPu/xf4DlFX12HR79bjO4HH3P1U\n76Zvi7v/LfDPNZuT76NGseiXgbvc/Z/d/V+Au4i6CGzKUAX5Jhq1Nk7KAM8mAkq9YzrpLcAP3P2R\nBvsduNPMHrCo3XIvXB3/ufz5Bn8etvI6dtP7iWZ89fTi9Wrl+189Jn4v/YjovdUTcXpoCri/zu6s\nmf29mX3VzF7bqzGx8c+m3++rK2g82erXa/YSP9nP6wTwkjrHdOR1G7g1Xs3sbuCsOruudfdbez2e\neloc47toPovf4VGfn38D3GVm341/43dlXESrc11H9B/yOqJU0vvbOV8nxlV9vczsWqBM1M20no6/\nXsPGzF4AHAJmfe2CPQAPEqUjfhxfb/ky0cpsvTCwP5v4utulwP46u/v5mq1ydzezrtWyD1yQ99Zb\nGye10tq4SPRn4lg8Azvl9scbjdHMxoBfA/5tk+d4Kv73GTP7S6JUQVv/MVp97czseqLlGmt1pUV0\nC6/X+4BLgJ0eJyPrPEfHX686Wvn+q8c8Gf+cf4rovdVVZjZOFOBvcve/qN2fDPruftjM/oeZnenu\nXW/E1cLPpp+tx98BPOjuP6jd0c/XDPiBmW1z96fj1NUzdY55iui6QdXLia5HbsqopGtuA66IKx9e\nQfTb+BvJA+Lg8XXg1+NN7wW69ZfB24DvuvuT9Xaa2fPN7CernxNdfPxWvWM7pSYH+qsNzvd3wPkW\nVSGlif7Mva3L43o7sA+41N2fa3BMr16vVr7/24jeOxC9l/660S+mTolz/jcA33H3TzU45qzqtQEz\n2070f7sXv3xa+dn0s/V4w7+o+/WaxZLvo0ax6GvARWb2wji9elG8bXO6fWW5kx9EwelJYBn4AfC1\nxL5riSojHgbekdh+GHhp/PkriYL/o8D/Ak7r0ji/QNR2ObntpcDhxDj+Pv74NlHaotuv3f8EloBv\nxm+wbbXjir++mKh647EejetRorzjsfjjs7Xj6uXrVe/7B/6Q6JcQwPPi986j8XvplT14jXYQpdm+\nmXidLgZ+q/o+I1qV7dvxa3Qf8KZuj6vZz6ZmbAb8SfyaLpGojOvy2J5PFLR/KrGt568Z0S+Zp4GV\nOH7tJbqOswA8AtwNvCg+dhr408Rj3x+/1x4latm+6fOrrYGIyAgblXSNiIjUoSAvIjLCFORFREaY\ngryIyAhTkBcRGWEK8iIiI0xBXkRkhP1/3LLUKRE/9l0AAAAASUVORK5CYII=\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G401fi_n9m0o",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
